Added a link to the person page on the settings page of a user, if he has claimed a person
- added getPersonByUser method to the logic interface
- added getPersonByUser to the ReadOnlyLogic and DBLogic
- added claimedUser to the settingsPageCommand
- added claimedUser t the updated SettingsPageController
- added sidebar message to the message properties

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/settings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/settings.jspx
@@ -89,6 +89,18 @@
 			| sidebar
 			+-->
 		<jsp:attribute name="sidebar">
+		
+			<!-- Claimed person -->
+			<c:if test="${not empty command.claimedPerson}">
+				<sidebar:sidebarItem textKey="settings.sidebar.claimedPerson">
+					<jsp:attribute name="content">
+						<a href="${relativeUrlGenerator.getPersonUrl(command.claimedPerson.personId)}">
+							${mtl:cleanBibtex(command.claimedPerson.mainName.firstName)} ${mtl:cleanBibtex(command.claimedPerson.mainName.lastName)}
+						</a>
+					</jsp:attribute>
+				</sidebar:sidebarItem>
+			</c:if>
+			
 			<!-- loginUser.friends -->
 			<sidebar:sidebarItem textKey="friends.friendof">
 				<jsp:attribute name="content">
