updated person email/homepage validators to allow empty fields

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
@@ -239,7 +239,16 @@
 											</c:otherwise>
 										</c:choose>
 
-										<a class="personPageFormFieldContent" id="personPageFormHomepageValue" rel="external nofollow" href="${fn:escapeXml(command.person.homepage)}" itemprop="url"><c:out value="${command.person.homepage}"/></a>									
+
+										<c:choose>
+											<c:when test='${not empty command.person.homepage}'>
+												<a class="personPageFormFieldContent" id="personPageFormHomepageValue" rel="external nofollow" href="${fn:escapeXml(command.person.homepage)}" itemprop="url"><c:out value="${command.person.homepage}"/></a>									
+											</c:when>
+											<c:otherwise>
+												<span class="personPageFormFieldContent" id="personPageFormHomepageValue"><c:out value=" " /></span> 
+											</c:otherwise>
+										</c:choose>
+
 									</div>
 									
 									<!-- Only visible if te loginUser claimed this person -->
