--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -209,7 +209,34 @@ a.personPageShowAdditionalRoleFields {
 	border-bottom: 1px solid #eee;
 }
 
+.simpleMatchEntry {
+	padding: 0 0 4px 0;
+	border-bottom: 1px solid #eee;
+}
+
+.simpleMatchEntry:nth-child(2n)  {
+	background-color: #f9f9f9;
+}
+
+.subSimplePubEntry:nth-child(2n)  {
+	background-color: #f9f9f9;
+}
+
+.subSimplePubEntry {
+	padding: 0 0 4px 0;
+	background-color: #fff;
+	border-bottom: 1px solid #eee;
+}
+
+.subSimplePubEntry:nth-last-child(1){
+	border-bottom: none !important;
+}
+
 .simplePubFirstLine {
+	width: 100%;
+}
+
+.simpleMatchFirstLine {
 	width: 100%;
 }
 
@@ -222,6 +249,17 @@ a.personPageShowAdditionalRoleFields {
 .simplePubTitle a {
 	display: inline-block;
 	padding: 0 56px 0 0;
+}
+
+.simpleMatchTitle {
+	font-weight: bold;
+	display: inline-block;
+	position: relative;
+}
+
+.simpleMatchTitle a {
+	display: inline-block;
+	padding: 0 4px 0 0;
 }
 
 .simplePubYear {
