optimized mergablePersonView on personPage and edit denie function

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
@@ -561,7 +561,7 @@
 				
 				<div id="personMatchesEntries">
 					<c:forEach var="personMatch" items="${command.personMatchList}">
-						<per:mergablePersonView personMatch="${personMatch}" currentPerson="${command.person}"/>
+ 						<per:mergablePersonView personMatch="${personMatch}" currentPerson="${command.person}" conflicts="${command.mergeConflicts}"/>
 					</c:forEach>
 				</div>
 			</div>
