--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -222,8 +222,15 @@ a.personPageShowAdditionalRoleFields {
 	background-color: #f9f9f9;
 }
 
+.firstSubSimplePubEntry {
+	padding: 0 0 4px 16px;
+	background-color: #fff;
+	border-bottom: 1px solid #eee;
+	background-color: #f9f9f9;
+}
+
 .subSimplePubEntry {
-	padding: 0 0 4px 0;
+	padding: 0 0 4px 16px;
 	background-color: #fff;
 	border-bottom: 1px solid #eee;
 }
@@ -300,5 +307,19 @@ a.personPageShowAdditionalRoleFields {
 
 .pubSort:hover {
 	color: #333;
+}
+
+.mergePersonLegend {
+	position: absolute;
+	bottom: 0;
+}
+
+.mergePersonLegendEntry {
+	border-bottom: 1px solid #eee;
+	padding: 4px 0 4px 0;
+}
+
+.mergePersonLegendEntry:nth-last-child(1) {
+	border-bottom: none;
 }
 
