--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
@@ -914,5 +914,35 @@
 			</div>
 		</div>
 	</div>
+	
+	<!-- The Modal -->
+	<div id="conflictModal" class="modal fade" role="dialog" tabindex="-1">
+		<div class="modal-dialog">
+			<!-- Modal content -->
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">x</button>
+					<h4 class="modal-title">Resolve Merge Conflict</h4>
+
+				</div>
+				<div class="modal-body" id="conflictModalDiaBody">
+					&amp;nbsp;
+				</div>
+				<div class="modal-footer">
+
+					<div class="btn-group pull-right">
+						<button id="conflictModalAccept" type="button" class="btn btn-success btn-sm mergeConflictButton"
+							data-operation="MERGE_ACCEPT" 
+							title="accept merge" data-dismiss="modal">&#10004;</button>
+						<button id="conflictModalDenie" type="button" class="btn btn-danger btn-sm mergeButton"
+							data-operation="MERGE_DENIED" 
+							title="denie merge" data-dismiss="modal">&#10006;</button>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+						
   
 </jsp:root>
