--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -792,6 +792,25 @@ div.newsbox ul.news {
 	margin-right: 2px;
 }
 
+#friendsOrGroups li:not(.keepme){
+	background-color: @main-color;
+	color: #fff;
+	font-size: 14px;
+	margin-right: 5px;
+	line-height: 18px;
+	padding: 2px 3px;
+	border: 1px solid @main-color;
+	border-radius: 3px;
+	-moz-border-radius: 3px; 
+	-webkit-border-radius: 3px;
+	cursor: pointer;
+}
+
+#friendsOrGroupsLabels {
+	margin-top: 100px;
+	margin-left: 20px;
+}
+
 span.help-popover {cursor:help}
 
 .help-content {
