--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/group.jspx
@@ -50,6 +50,9 @@
 			
 			<!-- declineGroup helper -->
 			<script src="${resdir}/javascript/admin/groups.js" type="text/javascript"><!--  --></script>
+			
+			<!--  restoreGroup helper -->
+			<script type="text/javascript" src="${resdir}/javascript/requestGroupAutocomplete.js"><!-- keep me --></script> 
 		</jsp:attribute>
 
 		<jsp:attribute name="content">
@@ -66,6 +69,26 @@
 			</c:if>
 			
 			<errors:global />
+			
+			<bsform:fieldset legendKey="settings.group.reactivate">
+				<jsp:attribute name="content">
+					<fmt:message key="settings.group.reactivate.description" />
+					<form:form name="groupInfo" action="${relativeUrlGenerator.getAdminUrlByName('group')}" method="POST" cssClass="form-horizontal">
+						<input type="hidden" value="RESTORE_GROUP" name="action" />
+						<bsform:select path="group.name" itemsList="${command.allDeletedGroupNames}" labelColSpan="3" inputColSpan="9" id="fetchGroupInfo" />
+						
+						<bsform:input path="group.groupRequest.userName" labelColSpan="3" inputColSpan="9" id="designatedAdmin" helpKey="settings.group.reactivate.help" autocomplete="true" labelKey="group.groupRequest.adminName" />
+						
+						
+						<div class="form-group">
+							<div class="col-sm-offset-3 col-sm-9">
+								<fmt:message key="settings.group.reactivate" var="reactivateButtonText" />
+								<bsform:button type="submit" style="primary" size="defaultSize" value="${reactivateButtonText}" />
+							</div>
+						</div>
+					</form:form>
+				</jsp:attribute>
+			</bsform:fieldset>				
 			
 			<bsform:fieldset legendKey="settings.group.delete">
 				<jsp:attribute name="content">
