first version with better labels

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -793,13 +793,13 @@ div.newsbox ul.news {
 }
 
 #friendsOrGroups li:not(.keepme){
-	background-color: @main-color;
+	background-color: #f0ad4e;
 	color: #fff;
 	font-size: 14px;
 	margin-right: 5px;
 	line-height: 18px;
 	padding: 2px 3px;
-	border: 1px solid @main-color;
+	border: 1px solid #f0ad4e;
 	border-radius: 3px;
 	-moz-border-radius: 3px; 
 	-webkit-border-radius: 3px;
