glyphicon position done

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -806,6 +806,12 @@ div.newsbox ul.news {
 	cursor: pointer;
 }
 
+.glyphicon-position {
+	margin-right: 2px;
+	position: relative;
+  	top: 2px;
+}
+
 #friendsOrGroupsLabels {
 	margin-top: 100px;
 	margin-left: 20px;
