removed glyphicons and added font-awesome icons

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -806,10 +806,9 @@ div.newsbox ul.news {
 	cursor: pointer;
 }
 
-.glyphicon-position {
+.fa-icon-position {
 	margin-right: 2px;
 	position: relative;
-  	top: 2px;
 }
 
 #friendsOrGroupsLabels {
