--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
@@ -320,7 +320,7 @@
 									<c:if test="${(not empty command.context.loginUser.name and empty command.person.user) or (not empty command.person.user and (command.person.user eq command.context.loginUser.name)) and not command.context.loginUser.spammer}">
 										<span class="personPageEnableForm fa fa-pencil"><!--  --></span>
 									</c:if>
-									<span class="personPageFormFieldContent" id="personPageFormOrcidValue">${mtl:beatifyOrcid(command.person.orcid)}</span>
+									<span class="personPageFormFieldContent" id="personPageFormOrcidValue"><a href="${mtl:callOrcidURL(command.person.orcid)}">${mtl:beatifyOrcid(command.person.orcid)}</a></span>
 								</div>
 								<div class="personPageFormField col-md-8">
 									<input class='form-control' type="text" name='person.orcid' id='formOrcid' placeholder="${textOrcidId}" value="${mtl:beatifyOrcid(command.person.orcid)}"/>
@@ -344,7 +344,7 @@
 									<c:if test="${(not empty command.context.loginUser.name and empty command.person.user) or (not empty command.person.user and (command.person.user eq command.context.loginUser.name)) and not command.context.loginUser.spammer}">
 										<span class="personPageEnableForm fa fa-pencil"><!--  --></span>
 									</c:if>
-									<span class="personPageFormFieldContent" id="personPageFormResearcheridValue">${mtl:beatifyResearcherid(command.person.researcherid)}</span>
+									<span class="personPageFormFieldContent" id="personPageFormResearcheridValue"><a href="${mtl:callResearcheridURL(command.person.researcherid)}">${mtl:beatifyResearcherid(command.person.researcherid)}</a></span>
 								</div>
 								<div class="personPageFormField col-md-8">
 									<input class='form-control' type="text" name='person.researcherid' id='formResearcherid' placeholder="${textResearcherId}" value="${mtl:beatifyResearcherid(command.person.researcherid)}"/>
