deleted page-header css top margin

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
@@ -94,6 +94,7 @@
 			</c:choose>
 		</jsp:attribute>
 
+		<!-- fix stuff here -->
 		<jsp:attribute name="content">
 			<errors:logicExceptions exceptions="${command.logicExceptions}" />
 			<c:if test="${not empty command.okHintKey}">
